Fix bug where container was not stretching to bottom of viewport

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html,
 body {
-  /*height: 100%;*/
+  height: 100%;
   font-family: 'Alegreya', serif;
   font-size: 1.1em;
   color: #444;
